--- a/templates/base.html
+++ b/templates/base.html
@@ -21,5 +21,6 @@
     <footer>
         <p>&copy; 2024 Luhn Number Generator and Validator</p>
     </footer>
+    {% block scripts %}{% endblock %}
 </body>
 </html>
