--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,9 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <p>&copy; 2024 Luhn Number Generator and Validator</p>
+        <p>&copy; 2024 UNDERSTANDING FLASK</p>
+        <BR>
+        <p>&bullet; BY LOKRANJAN</p>
     </footer>
     {% block scripts %}{% endblock %}
 </body>
