--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,9 @@
 
 {% block content %}
     <h2>Welcome to the Luhn Number Generator and Validator</h2>
-    <p>Use this application to generate and validate numbers using the Luhn algorithm.</p>
+    <p>Use this application to generate and validate numbers using the Luhn algorithm.</p><br>
+
+    <p> Resources I used to understand the algorithm : The Luhn algorithm:
+    <a href = www.wikipedia.org/wiki/Luhn_algorithm> Click here </a>
+    </p>
 {% endblock %}
