--- a/templates/validate.html
+++ b/templates/validate.html
@@ -30,10 +30,10 @@
             if (resultDiv) {
                 if (resultDiv.classList.contains('valid')) {
                     resultDiv.style.color = 'green';
-                    resultDiv.innerHTML += '<p style="font-size: 20px;">&#10003; This number is valid!✅</p>';
+                    resultDiv.innerHTML += '<p style="font-size: 20px;">This number is valid!✅</p>';
                 } else {
                     resultDiv.style.color = 'red';
-                    resultDiv.innerHTML += '<p style="font-size: 20px;">&#10007; This number is invalid!❌</p>';
+                    resultDiv.innerHTML += '<p style="font-size: 20px;">This number is invalid!❌</p>';
                 }
             }
         });
